[project]
name = "BevyFrame"
version = "0.6.0"
description = "Official SDK for BevyFrame the Web Framework"
readme = "README.md"
license = {text = "LGPL-2.1"}
maintainers = [{name = "Çağan Mert İŞLEK", email = "hello@islekcaganmert.me"}]
requires-python = ">=3.12"
dependencies = [
    "TheProtocols==4.0.0",
    "markupsafe==3.0.2",
    "jinja2==3.1.6"
]

[project.urls]
Homepage = "https://bevyframe.islekcaganmert.me"
Donate = "https://www.buymeacoffee.com/islekcaganmert"
Documentation = "https://bevyframe.islekcaganmert.me/docs"
Changes = "https://bevyframe.islekcaganmert.me/changes"
"Source Code" = "https://github.com/islekcaganmert/bevyframe"
"Issue Tracker" = "https://github.com/islekcaganmert/bevyframe/issues"
Chat = "https://lemmy.today/c/bevyframe"

[project.scripts]
bf_widget = "bevyframe.sh_widget:main"
bevyframe_py = "bevyframe.run:run"
bevyframe_html = "bevyframe.run_html:run"
bevystyle_py = "bevystyle.std_style:main"

[tool.setuptools.package-data]
"bevyframe" = ["Scripts/*.js", "Scripts/*.html"]

[build-system]
requires = ["setuptools","wheel"]
build-backend = "setuptools.build_meta"
